--- a/Vecherinka Website/vecherinka-copy.html
+++ b/Vecherinka Website/vecherinka-copy.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Name of the Website </title>
+    <link rel="stylesheet" href="/Vecherinka Website/css/vecherinka-copy.css">
+    <title> Vecherinka Copy </title>
 </head>
 <body>
-    
+
 </body>
 </html>
