header is finished

--- a/Vecherinka Website/vecherinka-copy.html
+++ b/Vecherinka Website/vecherinka-copy.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Vecherinka Website/css/vecherinka-copy.css">
+    <link rel="stylesheet" href="/css/normalize.css"> <!-- This should be first, because after it when comes another css file it would be more prioritize-->
+    <link rel="stylesheet" href="/css/vecherinka-copy.css">
     <title> Vecherinka Copy </title>
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="menu">
+                    <li class="menu-item"> <a class="menu-link" href="#">What's new</a></li>
+                    <li class="menu-item"> <a class="menu-link" href="#">Color</a></li>
+                    <li class="menu-item"> <a class="menu-link" href="#">Order</a>
+                    </li>
+                </ul>
     
+                <a href="#" class="logo">
+                    <img src="/img/logo-2.png" alt="logo">
+                </a>
+    
+                <a class="phone" href="tel:992551114644"> +992-551-11-46-44</a>
+            </nav>
+        </div>
+    </header>
+
+
 </body>
 </html>
