--- a/Vecherinka Website/vecherinka-copy.html
+++ b/Vecherinka Website/vecherinka-copy.html
@@ -9,6 +9,7 @@
     <title> Vecherinka Copy </title>
 </head>
 <body>
+
     <header class="header">
         <div class="container">
             <nav class="nav">
@@ -29,5 +30,117 @@
     </header>
 
 
+    <main class="main">
+        <section class="headline">
+            <div class="container">
+                <h1 class="title"> Iphone 14 pro</h1>
+                <img src="/img/header-line.png" alt="header-line">
+                <a href="#" class="header-line-botton"> Choose</a>
+            </div>
+        </section>
+    </main>
+
+    <section class="news">
+        <div class="container">
+            <h2 class="news-title"> What's new ?</h2>
+            <div class="news-info">
+                <div class="info"> 
+                    <p>  All models are equipped with a single-chip A16 Bionic system, a 48-megapixel main camera and ProMotion screens with Ceramic Shield protection 
+                    and a frequency range of 1 — 120 Hz, as well as accelerated LPDDR5 memory. The design of the line has been updated, there are two cutouts on the front panel
+                    of smartphones. 
+                    </p>
+                    <p>
+                        All iPhone 14 in the USA will be sold without a SIM card tray: the manufacturer claims that the improved SIM technology will allow the transfer of old 
+                        electronic SIM cards to new smartphones.
+                    </p>
+                    <p>
+                        The front camera has been updated (it is equipped with autofocus and recognizes the user faster in low light conditions) and the sensor of the main camera.
+                    </p>
+                    <p>
+                        The iPhone 14 Pro came out in a new design — without the branded "bangs". There is also a new color in the assortment. The smartphone, unlike the "usual" 
+                        14 iPhones, has an A16 Bionic processor installed, which can perform 4 trillion photo operations per second.
+                    </p>
+                </div>
+                <img src="/img/what's-new.jpg" alt="iphone">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="color news">
+        <div class="container">
+            <h2 class="news-title"> Choose color </h2>
+            <div class="color-iphone">
+
+                <div class="color-item">
+                    <img src="/img/silver 1.jpg" alt="iphone">
+                    <h3>Silver</h3>
+                    <p> Серебрянный </p>
+                </div>
+
+                <div class="color-item">
+                    <img src="/img/purple.jpg" alt="iphone">
+                    <h3> Deep purple</h3>
+                    <p> Темно фиолетовый </p>
+                </div>
+
+                <div class="color-item">
+                    <img src="/img/gold.jpg" alt="iphone">
+                    <h3>Gold</h3>
+                    <p> Золотой </p>
+                </div>
+
+                <div class="color-item">
+                    <img src="/img/black.jpg" alt="iphone">
+                    <h3> Space Black </h3>
+                    <p> Космический черный</p>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+
+
+
+
+
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="menu">
+                    <li class="menu-item"> <a class="menu-link" href="#">What's new</a></li>
+                    <li class="menu-item"> <a class="menu-link" href="#">Color</a></li>
+                    <li class="menu-item"> <a class="menu-link" href="#">Order</a>
+                    </li>
+                </ul>
+    
+                <a href="#" class="logo">
+                    <img src="/img/logo-2.png" alt="logo">
+                </a>
+    
+                <a class="phone" href="tel:992551114644"> +992-551-11-46-44</a>
+            </nav>
+        </div>
+    </header>
+    <ul>
+        <li>
+            <img src="" alt=""><a href=""></a>
+            <p></p>
+        </li>
+        <li>
+            <img src="" alt=""><a href=""></a>
+            <p></p>
+        </li>
+        <li>
+            <img src="" alt=""><a href=""></a>
+            <p></p>
+        </li>
+        <li>
+            <img src="" alt=""><a href=""></a>
+            <p></p>
+        </li>
+    </ul>
 </body>
 </html>
