--- a/Vecherinka Website/vecherinka.html
+++ b/Vecherinka Website/vecherinka.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/Vecherinka Website/css/vecherinka.css">
     <title> My vecherinka using all knowledge that i have and bigger than original</title>
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+
+            <nav class="nav">
+                <img src="" alt="logo">
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link"></a></li>
+                    <li class="menu-item"><a href="#" class="menu-link"></a></li>
+                    <li class="menu-item"><a href="#" class="menu-link"></a></li>
+                    <li class="menu-item"><a href="#" class="menu-link"></a></li>
+                    <li class="menu-item"><a href="#" class="menu-link"></a></li>
+                </ul>
+                <a href="#" class="language">TJ </a>
+                <img src="/" alt="">
+                <img src="/img-2/menu.png" alt="menu">
+            </nav>
+
+            <div class="header-info">
+                <div class="header-text">
+                    <h1> Your future is bright, just follow your dreams </h1>
+                    <p> This website provides students with neccesary information about variaty of Universities from all over the world, guides students on how to apply to specific 
+                        universities and helps to choose major and universities which fit on individual student. </p>
+                </div>
+                <div class="header-img">
+                    <img src="/img-2/header.jpg" alt="header">
+                </div>
+            </div>
+
+        </div>
+    </header>
     
 </body>
 </html>
